--- a/xss/xss-reflected/bad.html
+++ b/xss/xss-reflected/bad.html
@@ -4,7 +4,7 @@
     </head>
    <body><link rel='stylesheet' property='stylesheet' id='s' type='text/css' href="/static/styles/css/ss.css" media='all' />
            <h1>XSS Reflected</h1>
-	
+		<span style="text-align: right; float:right;"> User : {user}</span><br/>
 
 	<b>Write a note and share it </b><br/><br/>        <form action="" method="GET" >
 	        <div>
